@@ -26,6 +26,10 @@ unsigned long int f4(unsigned long int c) __z88dk_fastcall
 	return c + 1;
 }
 
+unsigned char (*p1)(unsigned char) __z88dk_fastcall;
+unsigned int (*p2)(unsigned int) __z88dk_fastcall;
+unsigned long int (*p4)(unsigned long int) __z88dk_fastcall;
+
 /* __smallc and __z88dk_callee are currently only supported on the caller side */
 
 void s1(int x, int y) __smallc;
@@ -37,10 +41,16 @@ void s3(int x, int y) __smallc __z88dk_callee;
 void
 testZ88dk(void)
 {
-#if 0 // Peephole optimizer bug #2371.
   ASSERT (f1 (23) == 24);
   ASSERT (f2 (23) == 24);
   ASSERT (f4 (23) == 24);
-#endif
+
+  p1 = &f1;
+  p2 = &f2;
+  p4 = &f4;
+
+  ASSERT ((*p1) (23) == 24);
+  ASSERT ((*p2) (23) == 24);
+  ASSERT ((*p4) (23) == 24);
 }
 
